Refs #2792: remove border-bottom:0 for rounded-top white area, to avoid blue gap on 768px

--- a/scoreboard/theme/browser/css/listing.css
+++ b/scoreboard/theme/browser/css/listing.css
@@ -97,7 +97,6 @@
 .rounded-top {
   border-top-right-radius: 5px;
   border-top-left-radius: 5px;
-  border-bottom: 0;
 }
 
 .use-top-padding {
